--- a/Pipo'sInsideVue/Drive.html
+++ b/Pipo'sInsideVue/Drive.html
@@ -73,7 +73,7 @@
         <div class="row" >
           <div class="col-sm-12" id ="uploaddiv">
             <div id="upload">
-              <button href = "" class="btn btn-default uploadbtn"><span class="glyphicon glyphicon-export" aria-hidden="upload..."></span>.</button>
+              <button href = "" class="btn btn-default uploadbtn"><span class="glyphicon glyphicon-export" aria-hidden="upload..."></span></button>
             </div>
             <div id="form">
             <form class="form-inline">
